--- a/genai.ipynb
+++ b/genai.ipynb
@@ -4,101 +4,39 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# hugging face\n",
-    "\n",
-    "- Hugging Face is a machine learning (ML) and data science platform and community that helps users build, deploy and train machine learning models\n",
-    "\n",
-    "\n",
-    "- The Hugging Face Hub is a platform with over 350k models, 75k datasets, and 150k demo apps (Spaces), all open source and publicly available"
+    "<center><font color=\"orange\"> Generative AI Interview Questions </font></center>"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# LlamaIndex ::\n",
+    "- Transformer & BERT Architecture?\n",
+    "- langchain,llamaindex\n",
+    "- Rag architecture\n",
+    "- What is encoder & Decoder?\n",
+    "- What is attention?\n",
+    "- What is self-attention\n",
+    "- Describe LangChain and its components\n",
+    "- Intuition of RAG - Difference between LangChain and Llmaindex\n",
+    "- Hugging face + Langchain for building applications\n",
+    "- Use cases: (Encoder or decoder based?)\n",
+    "- Text Summarization \n",
+    "- Text Classification\n",
+    "- Q&A \n",
+    "- Google \n",
+    "- OpenAI\n",
+    "- Traditional AI v/s GenAI\n",
+    "- explain encodr-decoder architecture\n",
+    "- https://www.analyticsvidhya.com/blog/2023/04/what-is-generative-ai/\n",
+    "- https://www.analyticsvidhya.com/blog/2023/08/generative-ai-projects/\n",
+    "- hugging face\n",
     "\n",
-    "- LlamaIndex is a simple, flexible data framework for connecting\n",
-    "custom data sources to large language models."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# LlamaIndex provides the key tools to augment your LLM applications with data\n",
+    "-  Hugging Face is a machine learning (ML) and data science platform and community that helps users build, deploy and train machine learning models\n",
     "\n",
-    "# Data Injestion:\n",
-    "    Connect your existing data sources and data formats (API's, PDF's, documents, SQL, etc.) to use with a large language model application.\n",
-    "\n",
-    "# Data Indexing :\n",
-    "   Store and index your data for different use cases. Integrate with downstream vector store and database providers.\n",
-    "\n",
-    "# Query Interface\n",
-    "\n",
-    "    LlamaIndex provides a query interface that accepts any input prompt over your data and returns a knowledge-augmented response.\n",
-    "  \n",
-    "\n",
-    "  # references\n",
-    "  https://github.com/run-llama/llama_index"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# how does self attention works\n",
-    "\n",
-    "- transforming the inputs sequences into three vector\n",
-    "   1. query\n",
-    "   2. key\n",
-    "   3. value\n",
-    "   "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Name some of the pretrained NLP Models\n",
-    "\n",
-    "# BERT :\n",
-    "    Bidirectional encoder representation from Transformer\n",
-    "\n",
-    "# GPT-2\n",
-    "\n",
-    "# ELMo : (Embedding from language model)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# LangChain\n",
-    "     \n",
-    "     LangChain is a framework for developing applications powered by language models. It enables applications that are ;\n",
-    "# context-aware:\n",
-    "     connect a language model to sources of context (prompt instructions, few shot examples, content to ground its response in, etc.)\n",
-    "\n",
-    "     Answer based on provided context, what actions to take, etc.\n",
-    "\n",
-    "# Reason: \n",
-    "    rely on a language model to reason (about how to answer based on provided context, what actions to take, etc.)\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# How to fine tune pretrained NLP Models\n",
-    "\n",
-    "- 1 : Prepare Data\n",
-    "- 2 : Set the hyper-parameter\n",
-    "- 3 : Evaluate the results\n"
+    "-  The Hugging Face Hub is a platform with over 350k models, 75k datasets, and 150k demo apps (Spaces), all open source and publicly available\n",
+    "- name some of the pretrained NLP models\n",
+    "- "
    ]
   },
   {
@@ -122,19 +60,97 @@
    "source": []
   },
   {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "array_1 = [1,2,3,5,4,6,7,8,5,3,2]\n"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": []
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 2,
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(array_1[:3])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[3, 5, 4, 6, 7, 8]\n"
+     ]
+    }
+   ],
+   "source": [
+    "array_1 = [1,2,3,5,4,6,7,8,5,3,2]\n",
+    "print(array_1[2:-3])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2, 5, 7, 4, 3, 1]\n"
+     ]
+    }
+   ],
+   "source": [
+    "array_1 = [1,2,3,5,4,6,7,8,5,3,2]\n",
+    "print(array_1[ : : -2])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.8.6"
   }
  },
  "nbformat": 4,
